--- a/views/artist-search.hbs
+++ b/views/artist-search.hbs
@@ -6,7 +6,7 @@
     <small>{{ genres }}</small>
     <br>
     <small>{{ description }}</small>
-    <a href="/albums/:id">View Albums</a>
+    <a href="/albums/{{ id }}">View Albums</a>
   </div>
 </div>
 {{/each}}
